# experimental-projects-system

./: .env  LICENSE  README.md  config.py  deploy.sh  experimental_projects.dsn  pyproject.toml  requirements.txt  wsgi.py
projects/: __init__.py  app.py  experimental_projects.sql  models.py  projects.py  routes.py
projects/static/: style.css
projects/templates/: base.jinja2  lab.jinja2  labs.jinja2  project.jinja2  projects.jinja2  result.jinja2  school.jinja2  schools.jinja2  search.jinja2  staff.jinja2  staff_member.jinja2  upload.jinja2
