[tool.poetry]
name = "practice"
version = "0.1.0"
description = "Upload experimental project information from file to database and alllow search and edit abilities."
authors = ["Ann Pantelei <ann.pntl@gmail.com>", "Pavel Kondeev <https://github.com/kondeevs>"]
maintainers = ["Ann Pantelei <ann.pntl@gmail.com>", "Pavel Kondeev <https://github.com/kondeevs>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/babyturrtle/practice/"
repository = "https://github.com/babyturrtle/practice/"
documentation = "https://github.com/babyturrtle/practice/"
keywords = [
    "Flask",
    "SQLAlchemy",
    "SQL",
    "Flask-SQLAlchemy"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_sqlalchemy = "*"
pymysql = "*"
python-dotenv = "*"
ddtrace = "^0.48.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^21.5b1"
isort = "^5.8.0"

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/babyturrtle/practice/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
